[design] [bug] fix display columns spacing and improved display content

--- a/src/sass/modules/_display.scss
+++ b/src/sass/modules/_display.scss
@@ -30,7 +30,7 @@
 }
 .m-display-grid {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   justify-content: flex-start;
   .m-display-col-three {
     flex: 1 0 auto;
